New features, still in testing. - Prune script to delete old records. - New look web layout. - File reorg.

--- a/app/DeltaR.conf
+++ b/app/DeltaR.conf
@@ -3,15 +3,18 @@
    db_user         => "postgres",
    db_pass         => "",
    db_host         => "127.0.0.1",
-   record_limit    => 1000,
+   record_limit    => 1000, # Limit the number of records returned by a query.
    agent_table     => "agent_log",
    inventory_table => "inventory_table",
-   inventory_limit => 15, # mintes too look backwards for inventory query
+   inventory_limit => 20, # mintes to look backwards for inventory query
    client_log_dir  => "/var/cfengine/delta_reporting/log/client_logs",
+   delete_age      => 90, # (days) Delete records older than this.
+   reduce_age      => 10, # (days) Reduce duplicate records older than this to one per day
+
    hypnotoad       => {
-      proxy => 1,
-      production => 1,
-      listen => [ 'http://2001:470:1d:a2f::2:8080', 'http://localhost:8080' ],
+      proxy          => 1,
+      production     => 1,
+      listen         => [ 'http://2001:470:1d:a2f::9:8080', 'http://localhost:8080' ],
       MOJO_LOG_LEVEL => 'debug',
    },
 };
