--- a/app/public/config.json
+++ b/app/public/config.json
@@ -5,7 +5,7 @@
     "@gray": "lighten(#000, 33.5%)",
     "@gray-light": "lighten(#000, 60%)",
     "@gray-lighter": "lighten(#000, 93.5%)",
-    "@brand-primary": "#428bca",
+    "@brand-primary": "#3f61c8",
     "@brand-success": "#5cb85c",
     "@brand-info": "#5bc0de",
     "@brand-warning": "#f0ad4e",
@@ -134,11 +134,11 @@
     "@navbar-padding-horizontal": "floor((@grid-gutter-width / 2))",
     "@navbar-padding-vertical": "((@navbar-height - @line-height-computed) / 2)",
     "@navbar-collapse-max-height": "340px",
-    "@navbar-default-color": "#777",
-    "@navbar-default-bg": "#f8f8f8",
+    "@navbar-default-color": "#ddd",
+    "@navbar-default-bg": "#3f61c8",
     "@navbar-default-border": "darken(@navbar-default-bg, 6.5%)",
-    "@navbar-default-link-color": "#777",
-    "@navbar-default-link-hover-color": "#333",
+    "@navbar-default-link-color": "#ddd",
+    "@navbar-default-link-hover-color": "#fff",
     "@navbar-default-link-hover-bg": "transparent",
     "@navbar-default-link-active-color": "#555",
     "@navbar-default-link-active-bg": "darken(@navbar-default-bg, 6.5%)",
