WIP for promise trend graphing.

--- a/app/DeltaR.conf
+++ b/app/DeltaR.conf
@@ -5,6 +5,7 @@
    db_host         => "127.0.0.1",
    record_limit    => 1000, # Limit the number of records returned by a query.
    agent_table     => "agent_log",
+   promise_counts  => "promise_counts",
    inventory_table => "inventory_table",
    inventory_limit => 20, # mintes to look backwards for inventory query
    client_log_dir  => "/var/cfengine/delta_reporting/log/client_logs",
@@ -13,7 +14,7 @@
 
    hypnotoad       => {
       proxy          => 1,
-      production     => 1,
+      #production     => 1,
       listen         => [ 'http://localhost:8080' ],
       MOJO_LOG_LEVEL => 'debug',
    },
