New: Promise percent report graph.

--- a/app/DeltaR.conf
+++ b/app/DeltaR.conf
@@ -14,8 +14,8 @@
 
    hypnotoad       => {
       proxy          => 1,
-      production     => 1,
+      #production     => 1,
       listen         => [ 'http://2001:470:1d:a2f::9:8080', 'http://localhost:8080' ],
-      #MOJO_LOG_LEVEL => 'debug',
+      MOJO_LOG_LEVEL => 'debug',
    },
 };
