Bug fix for final log loading.

--- a/app/DeltaR.conf
+++ b/app/DeltaR.conf
@@ -15,6 +15,6 @@
    hypnotoad       => {
       proxy          => 1,
       production     => 1,
-      listen         => [ 'http://localhost:8080' ],
+      listen         => [ 'http://2001:470:1d:a2f::2:8080' ],
    },
 };
