--- a/app/DeltaR.conf
+++ b/app/DeltaR.conf
@@ -1,3 +1,20 @@
+# Delta Reporting is a central server compliance log that uses CFEngine.
+# 
+# Copyright (C) 2013 Evolve Thinking http://evolvethinking.com
+# 
+# This program is free software: you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation, either version 3 of the License, or
+# (at your option) any later version.
+# 
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+# 
+# You should have received a copy of the GNU General Public License
+# along with this program.  If not, see <http://www.gnu.org/licenses/>.
+
 {
    db_name         => "delta_reporting",
    db_user         => "postgres",
@@ -15,6 +32,7 @@
    hypnotoad       => {
       proxy          => 1,
       production     => 1,
-      listen         => [ 'http://2001:470:1d:a2f::2:8080' ],
+      listen         => [ 'http://<ip>:8080' ],
    },
 };
+
