Ready config for production.

--- a/app/DeltaR.conf
+++ b/app/DeltaR.conf
@@ -31,7 +31,7 @@
 
    hypnotoad       => {
       proxy          => 1,
-      #production     => 1,
+      production     => 1,
       listen         => [ 'localhost:8080' ],
    },
 };
