--- a/app/DeltaR.conf
+++ b/app/DeltaR.conf
@@ -1,25 +1,12 @@
-# Delta Reporting is a central server compliance log that uses CFEngine.
-# 
-# Copyright (C) 2013 Evolve Thinking http://evolvethinking.com
-# 
-# This program is free software: you can redistribute it and/or modify
-# it under the terms of the GNU General Public License as published by
-# the Free Software Foundation, either version 3 of the License, or
-# (at your option) any later version.
-# 
-# This program is distributed in the hope that it will be useful,
-# but WITHOUT ANY WARRANTY; without even the implied warranty of
-# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-# GNU General Public License for more details.
-# 
-# You should have received a copy of the GNU General Public License
-# along with this program.  If not, see <http://www.gnu.org/licenses/>.
+# This is a temp config for the test plan.
 
 {
    db_name         => "delta_reporting",
-   db_user         => "postgres",
+   db_user         => "deltar_ro",
    db_pass         => "",
-   db_host         => "127.0.0.1",
+   db_wuser        => "deltar_rw",
+   db_wpass        => "",
+   db_host         => "locahost",
    record_limit    => 1000, # Limit the number of records returned by a query.
    agent_table     => "agent_log",
    promise_counts  => "promise_counts",
@@ -32,7 +19,6 @@
    hypnotoad       => {
       proxy          => 1,
       production     => 1,
-      listen         => [ 'localhost:8080' ],
+      listen         => [ 'http://locahost:8080' ],
    },
 };
-
