Fix type on DeltaR.conf. Fix incorrect path to table exporter applet.

--- a/app/DeltaR.conf
+++ b/app/DeltaR.conf
@@ -6,7 +6,7 @@
    db_pass         => "",
    db_wuser        => "deltar_rw",
    db_wpass        => "",
-   db_host         => "locahost",
+   db_host         => "localhost",
    record_limit    => 1000, # Limit the number of records returned by a query.
    agent_table     => "agent_log",
    promise_counts  => "promise_counts",
@@ -19,6 +19,6 @@
    hypnotoad       => {
       proxy          => 1,
       production     => 1,
-      listen         => [ 'http://locahost:8080' ],
+      listen         => [ 'http://localhost:8080' ],
    },
 };
