Add config for Mojo secret passphrase

--- a/app/DeltaR.conf
+++ b/app/DeltaR.conf
@@ -7,6 +7,10 @@
    db_wuser        => "deltar_rw",
    db_wpass        => "",
    db_host         => "localhost",
+
+# Change these, and rotate out old ones.
+   secrets         => [ 'secret passphrase', 'old secret passphrase' ],
+
    record_limit    => 1000, # Limit the number of records returned by a query.
    agent_table     => "agent_log",
    promise_counts  => "promise_counts",
