Fix config db name

--- a/app/DeltaR.conf
+++ b/app/DeltaR.conf
@@ -1,7 +1,7 @@
 # This is a temp config for the test plan.
 
 {
-   db_name         => "delta_reporting_test",
+   db_name         => "delta_reporting",
    db_user         => "deltar_ro",
    db_pass         => "",
    db_wuser        => "deltar_rw",
