--- a/app/DeltaR.conf
+++ b/app/DeltaR.conf
@@ -38,6 +38,6 @@
    hypnotoad       => {
       proxy          => 1,
       #production     => 1,
-      listen         => [ 'http://2001:470:1d:a2f::9:8080' ],
+      listen         => [ 'http://localhost:8080' ],
    },
 };
