--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ before-script:
    - psql -c 'GRANT SELECT INSERT DELETE CREATE ON delta_reporting.* TO delta_rw;' -U postgres
 
 install:
-   - cpanm -n install Test::More Test::Exception Net::DNS Regexp::Common Sys::Hostname::Long DBI DBD:Pg
+   - cpanm -n install Test::More Test::Exception Net::DNS Regexp::Common Sys::Hostname::Long DBI DBD::Pg
 
 script:
    - cd app; ./DeltaR.pl test
