--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ perl:
 services:
    - postgresql
 
-before-script:
+before_script:
    - psql -c 'CREATE DATABASE delta_reporting_test;' -U postgres
    - psql -c 'CREATE USER deltar_ro;' -U postgres
    - psql -c 'CREATE USER deltar_rw;' -U postgres
