--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,8 @@ before_script:
    - psql -c 'CREATE DATABASE delta_reporting_test;' -U postgres
    - psql -c 'CREATE USER deltar_ro;' -U postgres
    - psql -c 'CREATE USER deltar_rw;' -U postgres
-   - psql -c 'GRANT SELECT ON ALL TABLES IN SCHEMA delta_reporting.* TO delta_ro;' -U postgres
-   - psql -c 'GRANT SELECT INSERT DELETE CREATE ON ALL TABLES IN SCHEMA delta_reporting.* TO delta_rw;' -U postgres
+   - psql -c 'GRANT SELECT ON ALL TABLES IN SCHEMA delta_reporting TO delta_ro;' -U postgres
+   - psql -c 'GRANT SELECT INSERT DELETE CREATE ON ALL TABLES IN SCHEMA delta_reporting TO delta_rw;' -U postgres
 
 install:
    - cpanm -n Test::More Test::Exception Net::DNS Regexp::Common Sys::Hostname::Long DBI DBD::Pg IO::Socket::IP Log::Log4perl
