--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,8 @@ before_script:
 install:
    - cpanm -n Test::More Net::DNS Regexp::Common Sys::Hostname::Long DBI DBD::Pg IO::Socket::IP Log::Log4perl
    - echo 'perl [$PERL]'
+   - echo 'which perl:'; which perl
+   - echo 'perl version:'; perl -v
 
 script:
    - cd app; perl DeltaR.pl test
